# thmp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  THMP_Full_Build_Plan.docx  connector-spec.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  connector_proposal.md  feature_request.md
.github/workflows/: ci.yml
backend/attack_service/: Dockerfile  pyproject.toml
backend/attack_service/alembic/: env.py
backend/attack_service/app/: deps.py  main.py  models.py  schemas.py  stix_ingest.py  stix_parse.py
backend/attack_service/tests/: test_stix_parse.py
backend/attack_suggest_service/: Dockerfile  pyproject.toml
backend/attack_suggest_service/app/: embedder.py  main.py
backend/audit_service/: Dockerfile  pyproject.toml
backend/audit_service/alembic/: env.py
backend/audit_service/app/: deps.py  main.py  models.py  schemas.py
backend/audit_service/tests/: conftest.py  test_audit_schema.py
backend/hypothesis_service/: Dockerfile  pyproject.toml
backend/hypothesis_service/alembic/: env.py
backend/hypothesis_service/alembic/versions/: 001_initial_hypothesis.py  002_phase4_analyst_workflow.py  003_evidence_metadata.py
backend/hypothesis_service/app/: attack_validate.py  concurrency.py  deps.py  file_storage.py  fsm.py  hunt_fsm.py  ioc_extract.py  main.py  mention_notifications.py  models.py  schemas.py  scoring.py  search.py
backend/hypothesis_service/app/routers/: evidence.py  hunts.py  hypotheses.py  internal_hypotheses.py  search.py  workspace_workflow.py
backend/hypothesis_service/tests/: conftest.py  test_fsm.py  test_hunt_fsm.py  test_internal_ingest_dedupe.py  test_ioc_extract.py  test_scoring.py
backend/ingestion_service/: Dockerfile  pyproject.toml
backend/ingestion_service/app/: __init__.py  connectors.py  deps.py  main.py
backend/ingestion_service/app/routers/: ingest.py
backend/ingestion_service/tests/: conftest.py  test_ingest_batch.py
backend/reporting_service/: Dockerfile  alembic.ini  pyproject.toml
backend/reporting_service/alembic/: env.py
backend/reporting_service/app/: __init__.py  audit_emit.py  celery_app.py  collectors.py  deps.py  main.py  models.py  pdf_render.py  schemas.py  stix_export.py  storage.py  tasks.py  templates.py
backend/reporting_service/tests/: conftest.py  test_schemas.py  (+1 more)
backend/thmp_cdk/: pyproject.toml
backend/thmp_common/: pyproject.toml
backend/thmp_common/thmp_common/: __init__.py  config.py  jwt_tokens.py  security.py
backend/user_service/: Dockerfile  pyproject.toml
connectors/elastic_scm/: README.md  pyproject.toml
connectors/elastic_scm/elastic_scm/: adapter.py  schemas.py
connectors/elastic_scm/tests/: test_adapter.py
connectors/elastic_siem/: README.md  pyproject.toml
connectors/elastic_siem/elastic_siem/: adapter.py  schemas.py
connectors/elastic_siem/tests/: test_adapter.py
connectors/email_notify/: README.md  pyproject.toml
connectors/email_notify/email_notify/: adapter.py
connectors/email_notify/tests/: test_adapter.py
connectors/example_webhook/: README.md  pyproject.toml
connectors/example_webhook/example_webhook/: __init__.py  adapter.py
connectors/example_webhook/tests/: test_adapter.py
connectors/jira/: pyproject.toml
connectors/jira/jira/: adapter.py
connectors/jira/tests/: test_adapter.py
connectors/misp/: README.md  pyproject.toml
connectors/misp/misp/: adapter.py  schemas.py
connectors/misp/tests/: test_adapter.py
connectors/opencti/: README.md  pyproject.toml
connectors/opencti/opencti/: adapter.py  schemas.py
connectors/opencti/tests/: test_adapter.py
connectors/pagerduty/: README.md  pyproject.toml
connectors/pagerduty/pagerduty/: adapter.py
connectors/pagerduty/tests/: test_adapter.py
connectors/qradar/: README.md  pyproject.toml
connectors/qradar/qradar/: adapter.py  schemas.py
connectors/qradar/tests/: test_adapter.py
connectors/qualys/: README.md  pyproject.toml
connectors/qualys/qualys/: adapter.py
connectors/qualys/tests/: test_adapter.py
connectors/sentinel/: README.md  pyproject.toml
connectors/sentinel/sentinel/: adapter.py  schemas.py
connectors/sentinel/tests/: test_adapter.py
connectors/servicenow/: README.md  pyproject.toml
connectors/servicenow/servicenow/: adapter.py
connectors/servicenow/tests/: test_adapter.py
connectors/slack/: README.md  pyproject.toml
connectors/splunk/: README.md  pyproject.toml
connectors/splunk_soar/: README.md  pyproject.toml
connectors/stix_taxii/: README.md  pyproject.toml
connectors/stix_taxii/stix_taxii/: adapter.py  schemas.py
connectors/stix_taxii/tests/: test_adapter.py
connectors/teams/: README.md  pyproject.toml
connectors/teams/teams/: adapter.py
connectors/teams/tests/: test_adapter.py
connectors/tenable/: README.md  pyproject.toml
connectors/tenable/tenable/: adapter.py  schemas.py
connectors/tenable/tests/: test_adapter.py
connectors/xsoar/: README.md  pyproject.toml
connectors/xsoar/tests/: test_adapter.py
connectors/xsoar/xsoar/: adapter.py
design/: THMP Design System.html  index-standalone-src.html  index.html
design/src/: app.jsx  foundations.jsx  hifi-attack.jsx  hifi-hunt.jsx  ia.jsx  journeys.jsx  primitives.jsx  specs.jsx  theme.jsx  wireframes.jsx
docs/: contributing.md  design-parity-audit.md  development.md  frontend-routes.md  frontend-ui.md
docs/adr/: 0001-record-architecture-decisions.md  0002-backend-stack-and-service-boundaries.md  0003-workspace-multi-tenancy.md  0004-append-only-audit-log.md  0005-connector-adapter-pattern.md  0006-attack-catalog-service.md  0006-ingestion-auth-and-dedupe.md  0007-phase4-analyst-workflow.md  0008-ingestion-auth-and-dedupe.md  0009-single-spa-workspaces.md  0010-object-storage-and-search.md  0011-oidc-authentication.md  0012-phase5-reporting.md
docs/architecture/: data-model.md  database-phase1.md  gateway-jwt.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
scripts/: smoke_api.py
(+86 files in other folders)
