[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thmp-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic-settings>=2.2,<3",
  "python-jose[cryptography]==3.3.0",
  "bcrypt>=4.1,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thmp_common*"]
