[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thmp-connector-pagerduty"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["thmp-cdk"]

[project.entry-points."thmp.connectors"]
pagerduty = "pagerduty.adapter:PagerDutyAdapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["pagerduty*"]
