[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thmp-connector-stix-taxii"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "thmp-cdk",
  "pydantic>=2.0",
]

[project.entry-points."thmp.connectors"]
stix_taxii = "stix_taxii.adapter:StixTaxiiAdapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["stix_taxii*"]
