[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thmp-connector-tenable"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "thmp-cdk",
  "pydantic>=2.0",
]

[project.entry-points."thmp.connectors"]
tenable_io = "tenable.adapter:TenableAdapter"

[tool.setuptools.packages.find]
where = ["."]
include = ["tenable*"]
